--- a/Project2MissionSite/Content/Styles.css
+++ b/Project2MissionSite/Content/Styles.css
@@ -69,7 +69,7 @@
        z-index: -100;
        width:100%;
 }
-#DanJones {
+#background-home{
     background-image: url(../Content/Images/DanJones.png);
     background-repeat: no-repeat;
     background-position: center;
