--- a/Project2MissionSite/Views/Home/MissionFAQ.cshtml
+++ b/Project2MissionSite/Views/Home/MissionFAQ.cshtml
@@ -11,21 +11,21 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-3">
-            <h3>Mission President: </h3>
-            <h3>Mission Home Address: </h3>
-            <h3>Language: </h3>
-            <h3>Climate: </h3>
-            <h3>Dominant Religion: </h3>
+        <div class="col-md-6">
+            <h3>Mission President: @ViewBag.Missions.MissionPresFirstName @ViewBag.Missions.MissionPresLastName</h3>
+            <h3>Mission Home Address: @ViewBag.Missions.MissionHomeAddress</h3>
+            <h3>Language: @ViewBag.Missions.MissionLanguage</h3>
+            <h3>Climate: @ViewBag.Missions.MissionClimate</h3>
+            <h3>Dominant Religion: @ViewBag.Missions.MissionDominantReligion</h3>
 
         </div>
-        <div class="col-md-3">
+        <!--<div class="col-md-3">
             <h3>@ViewBag.Missions.MissionPresFirstName @ViewBag.Missions.MissionPresLastName</h3>
             <h3>@ViewBag.Missions.MissionHomeAddress</h3>
             <h3>@ViewBag.Missions.MissionLanguage</h3>
             <h3>@ViewBag.Missions.MissionClimate</h3>
             <h3>@ViewBag.Missions.MissionDominantReligion</h3>
-        </div>
+        </div>-->
         <div class="col-md-6">
             @{
                 string flag = @ViewBag.Missions.MissionFlag + ".png";
